cozmo can run saved functions now

--- a/MapFunctionsToInternalStates.ipynb
+++ b/MapFunctionsToInternalStates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39415,7 +39415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -39446,28 +39446,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.617741e+09</td>\n",
-       "      <td>'move_head', -10, 0, 0, 80)</td>\n",
+       "      <td>1.616770e+09</td>\n",
+       "      <td>'display_oled_face_image', 'resources/cozmo_fa...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.617741e+09</td>\n",
-       "      <td>'move_head', 0, 0, 0, 80)</td>\n",
+       "      <td>1.616770e+09</td>\n",
+       "      <td>'drive_wheels', 25.0, 25.0, 3)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.617741e+09</td>\n",
-       "      <td>'move_arm', 'left', 80, 80)</td>\n",
+       "      <td>1.616770e+09</td>\n",
+       "      <td>'set_lift_height', 0, 1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.617741e+09</td>\n",
-       "      <td>'move_arm', 'right', 80, 80)</td>\n",
+       "      <td>1.616770e+09</td>\n",
+       "      <td>'set_head_angle', -10, 1, 3)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.617741e+09</td>\n",
-       "      <td>'display_face', 'e_DefaultContent.jpg', 1)</td>\n",
+       "      <td>1.616770e+09</td>\n",
+       "      <td>'display_oled_face_image', 'resources/cozmo_fa...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -39475,53 +39475,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7953</th>\n",
-       "      <td>1.637354e+09</td>\n",
-       "      <td>'move_head', 0, 35, 0, 80)</td>\n",
+       "      <th>6551</th>\n",
+       "      <td>1.637355e+09</td>\n",
+       "      <td>'say_text', 'umm', 1, -0.125)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7954</th>\n",
-       "      <td>1.637354e+09</td>\n",
-       "      <td>'drive_track', -16, 48, 2)</td>\n",
+       "      <th>6552</th>\n",
+       "      <td>1.637355e+09</td>\n",
+       "      <td>'set_head_angle', 44.5, 1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7955</th>\n",
-       "      <td>1.637354e+09</td>\n",
-       "      <td>'move_head', 0, 0, 0, 80)</td>\n",
+       "      <th>6553</th>\n",
+       "      <td>1.637355e+09</td>\n",
+       "      <td>'drive_wheels', 100.0, 100.0, 1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7956</th>\n",
-       "      <td>1.637354e+09</td>\n",
-       "      <td>'move_arm', 'left', 80, 80)</td>\n",
+       "      <th>6554</th>\n",
+       "      <td>1.637355e+09</td>\n",
+       "      <td>'set_lift_height', 0, 1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7957</th>\n",
-       "      <td>1.637354e+09</td>\n",
-       "      <td>'move_arm', 'right', 80, 80)</td>\n",
+       "      <th>6555</th>\n",
+       "      <td>1.637355e+09</td>\n",
+       "      <td>'set_head_angle', -10, 1, 3)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7958 rows × 2 columns</p>\n",
+       "<p>6556 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                ID                                    Function\n",
-       "0     1.617741e+09                 'move_head', -10, 0, 0, 80)\n",
-       "1     1.617741e+09                   'move_head', 0, 0, 0, 80)\n",
-       "2     1.617741e+09                 'move_arm', 'left', 80, 80)\n",
-       "3     1.617741e+09                'move_arm', 'right', 80, 80)\n",
-       "4     1.617741e+09  'display_face', 'e_DefaultContent.jpg', 1)\n",
-       "...            ...                                         ...\n",
-       "7953  1.637354e+09                  'move_head', 0, 35, 0, 80)\n",
-       "7954  1.637354e+09                  'drive_track', -16, 48, 2)\n",
-       "7955  1.637354e+09                   'move_head', 0, 0, 0, 80)\n",
-       "7956  1.637354e+09                 'move_arm', 'left', 80, 80)\n",
-       "7957  1.637354e+09                'move_arm', 'right', 80, 80)\n",
+       "                ID                                           Function\n",
+       "0     1.616770e+09  'display_oled_face_image', 'resources/cozmo_fa...\n",
+       "1     1.616770e+09                     'drive_wheels', 25.0, 25.0, 3)\n",
+       "2     1.616770e+09                           'set_lift_height', 0, 1)\n",
+       "3     1.616770e+09                       'set_head_angle', -10, 1, 3)\n",
+       "4     1.616770e+09  'display_oled_face_image', 'resources/cozmo_fa...\n",
+       "...            ...                                                ...\n",
+       "6551  1.637355e+09                      'say_text', 'umm', 1, -0.125)\n",
+       "6552  1.637355e+09                         'set_head_angle', 44.5, 1)\n",
+       "6553  1.637355e+09                   'drive_wheels', 100.0, 100.0, 1)\n",
+       "6554  1.637355e+09                           'set_lift_height', 0, 1)\n",
+       "6555  1.637355e+09                       'set_head_angle', -10, 1, 3)\n",
        "\n",
-       "[7958 rows x 2 columns]"
+       "[6556 rows x 2 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39534,27 +39534,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "misty_functions['Function'] = misty_functions['Function'].apply(lambda x: '(' + x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                      'move_head', -10, 0, 0, 80)\n",
-       "1                        'move_head', 0, 0, 0, 80)\n",
-       "2                      'move_arm', 'left', 80, 80)\n",
-       "3                     'move_arm', 'right', 80, 80)\n",
-       "4       'display_face', 'e_DefaultContent.jpg', 1)\n",
-       "                           ...                    \n",
-       "7953                    'move_head', 0, 35, 0, 80)\n",
-       "7954                    'drive_track', -16, 48, 2)\n",
-       "7955                     'move_head', 0, 0, 0, 80)\n",
-       "7956                   'move_arm', 'left', 80, 80)\n",
-       "7957                  'move_arm', 'right', 80, 80)\n",
-       "Name: Function, Length: 7958, dtype: object"
+       "0       ('display_oled_face_image', 'resources/cozmo_f...\n",
+       "1                         ('drive_wheels', 25.0, 25.0, 3)\n",
+       "2                               ('set_lift_height', 0, 1)\n",
+       "3                           ('set_head_angle', -10, 1, 3)\n",
+       "4       ('display_oled_face_image', 'resources/cozmo_f...\n",
+       "                              ...                        \n",
+       "6551                       ('say_text', 'umm', 1, -0.125)\n",
+       "6552                          ('set_head_angle', 44.5, 1)\n",
+       "6553                    ('drive_wheels', 100.0, 100.0, 1)\n",
+       "6554                            ('set_lift_height', 0, 1)\n",
+       "6555                        ('set_head_angle', -10, 1, 3)\n",
+       "Name: Function, Length: 6556, dtype: object"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39565,16 +39574,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "misty_functions['Function'] = misty_functions['Function'].apply(lambda x: '(' + x)"
+    "misty_functions.to_csv (r'functions_misty_no_dashes.csv', index = None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -39605,28 +39614,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.617741e+09</td>\n",
-       "      <td>('move_head', -10, 0, 0, 80)</td>\n",
+       "      <td>1.616770e+09</td>\n",
+       "      <td>'display_oled_face_image', 'resources/cozmo_fa...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.617741e+09</td>\n",
-       "      <td>('move_head', 0, 0, 0, 80)</td>\n",
+       "      <td>1.616770e+09</td>\n",
+       "      <td>'drive_wheels', 25.0, 25.0, 3)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.617741e+09</td>\n",
-       "      <td>('move_arm', 'left', 80, 80)</td>\n",
+       "      <td>1.616770e+09</td>\n",
+       "      <td>'set_lift_height', 0, 1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.617741e+09</td>\n",
-       "      <td>('move_arm', 'right', 80, 80)</td>\n",
+       "      <td>1.616770e+09</td>\n",
+       "      <td>'set_head_angle', -10, 1, 3)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.617741e+09</td>\n",
-       "      <td>('display_face', 'e_DefaultContent.jpg', 1)</td>\n",
+       "      <td>1.616770e+09</td>\n",
+       "      <td>'display_oled_face_image', 'resources/cozmo_fa...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -39634,59 +39643,110 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7953</th>\n",
-       "      <td>1.637354e+09</td>\n",
-       "      <td>('move_head', 0, 35, 0, 80)</td>\n",
+       "      <th>6551</th>\n",
+       "      <td>1.637355e+09</td>\n",
+       "      <td>'say_text', 'umm', 1, -0.125)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7954</th>\n",
-       "      <td>1.637354e+09</td>\n",
-       "      <td>('drive_track', -16, 48, 2)</td>\n",
+       "      <th>6552</th>\n",
+       "      <td>1.637355e+09</td>\n",
+       "      <td>'set_head_angle', 44.5, 1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7955</th>\n",
-       "      <td>1.637354e+09</td>\n",
-       "      <td>('move_head', 0, 0, 0, 80)</td>\n",
+       "      <th>6553</th>\n",
+       "      <td>1.637355e+09</td>\n",
+       "      <td>'drive_wheels', 100.0, 100.0, 1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7956</th>\n",
-       "      <td>1.637354e+09</td>\n",
-       "      <td>('move_arm', 'left', 80, 80)</td>\n",
+       "      <th>6554</th>\n",
+       "      <td>1.637355e+09</td>\n",
+       "      <td>'set_lift_height', 0, 1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7957</th>\n",
-       "      <td>1.637354e+09</td>\n",
-       "      <td>('move_arm', 'right', 80, 80)</td>\n",
+       "      <th>6555</th>\n",
+       "      <td>1.637355e+09</td>\n",
+       "      <td>'set_head_angle', -10, 1, 3)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7958 rows × 2 columns</p>\n",
+       "<p>6556 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                ID                                     Function\n",
-       "0     1.617741e+09                 ('move_head', -10, 0, 0, 80)\n",
-       "1     1.617741e+09                   ('move_head', 0, 0, 0, 80)\n",
-       "2     1.617741e+09                 ('move_arm', 'left', 80, 80)\n",
-       "3     1.617741e+09                ('move_arm', 'right', 80, 80)\n",
-       "4     1.617741e+09  ('display_face', 'e_DefaultContent.jpg', 1)\n",
-       "...            ...                                          ...\n",
-       "7953  1.637354e+09                  ('move_head', 0, 35, 0, 80)\n",
-       "7954  1.637354e+09                  ('drive_track', -16, 48, 2)\n",
-       "7955  1.637354e+09                   ('move_head', 0, 0, 0, 80)\n",
-       "7956  1.637354e+09                 ('move_arm', 'left', 80, 80)\n",
-       "7957  1.637354e+09                ('move_arm', 'right', 80, 80)\n",
+       "                ID                                           Function\n",
+       "0     1.616770e+09  'display_oled_face_image', 'resources/cozmo_fa...\n",
+       "1     1.616770e+09                     'drive_wheels', 25.0, 25.0, 3)\n",
+       "2     1.616770e+09                           'set_lift_height', 0, 1)\n",
+       "3     1.616770e+09                       'set_head_angle', -10, 1, 3)\n",
+       "4     1.616770e+09  'display_oled_face_image', 'resources/cozmo_fa...\n",
+       "...            ...                                                ...\n",
+       "6551  1.637355e+09                      'say_text', 'umm', 1, -0.125)\n",
+       "6552  1.637355e+09                         'set_head_angle', 44.5, 1)\n",
+       "6553  1.637355e+09                   'drive_wheels', 100.0, 100.0, 1)\n",
+       "6554  1.637355e+09                           'set_lift_height', 0, 1)\n",
+       "6555  1.637355e+09                       'set_head_angle', -10, 1, 3)\n",
        "\n",
-       "[7958 rows x 2 columns]"
+       "[6556 rows x 2 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "misty_functions['Function']"
+    "cozmo_functions = pd.read_csv (r'functions_cozmo_no_dashes.txt', sep='(')\n",
+    "cozmo_functions.to_csv (r'functions_cozmo_no_dashes.csv', index = None)\n",
+    "cozmo_functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cozmo_functions['Function'] = cozmo_functions['Function'].apply(lambda x: '(' + x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       ('display_oled_face_image', 'resources/cozmo_f...\n",
+       "1                         ('drive_wheels', 25.0, 25.0, 3)\n",
+       "2                               ('set_lift_height', 0, 1)\n",
+       "3                           ('set_head_angle', -10, 1, 3)\n",
+       "4       ('display_oled_face_image', 'resources/cozmo_f...\n",
+       "                              ...                        \n",
+       "6551                       ('say_text', 'umm', 1, -0.125)\n",
+       "6552                          ('set_head_angle', 44.5, 1)\n",
+       "6553                    ('drive_wheels', 100.0, 100.0, 1)\n",
+       "6554                            ('set_lift_height', 0, 1)\n",
+       "6555                        ('set_head_angle', -10, 1, 3)\n",
+       "Name: Function, Length: 6556, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cozmo_functions['Function']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cozmo_functions.to_csv (r'functions_cozmo_no_dashes.csv', index = None)"
    ]
   },
   {
