dictionary of functions almost done except for last ID of functions

--- a/MapFunctionsToInternalStates.ipynb
+++ b/MapFunctionsToInternalStates.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from collections import defaultdict"
    ]
   },
@@ -39415,7 +39416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -39446,28 +39447,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.616770e+09</td>\n",
-       "      <td>'display_oled_face_image', 'resources/cozmo_fa...</td>\n",
+       "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.616770e+09</td>\n",
-       "      <td>'drive_wheels', 25.0, 25.0, 3)</td>\n",
+       "      <td>1617740862.2616577</td>\n",
+       "      <td>'move_head', -10, 0, 0, 80)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.616770e+09</td>\n",
-       "      <td>'set_lift_height', 0, 1)</td>\n",
+       "      <td>1617740862.2616577</td>\n",
+       "      <td>'move_head', 0, 0, 0, 80)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.616770e+09</td>\n",
-       "      <td>'set_head_angle', -10, 1, 3)</td>\n",
+       "      <td>1617740862.2616577</td>\n",
+       "      <td>'move_arm', 'left', 80, 80)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.616770e+09</td>\n",
-       "      <td>'display_oled_face_image', 'resources/cozmo_fa...</td>\n",
+       "      <td>1617740862.2616577</td>\n",
+       "      <td>'move_arm', 'right', 80, 80)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -39475,95 +39476,95 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6551</th>\n",
-       "      <td>1.637355e+09</td>\n",
-       "      <td>'say_text', 'umm', 1, -0.125)</td>\n",
+       "      <th>9396</th>\n",
+       "      <td>1637353834.2910442</td>\n",
+       "      <td>'move_head', 0, 35, 0, 80)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6552</th>\n",
-       "      <td>1.637355e+09</td>\n",
-       "      <td>'set_head_angle', 44.5, 1)</td>\n",
+       "      <th>9397</th>\n",
+       "      <td>1637353834.2910442</td>\n",
+       "      <td>'drive_track', -16, 48, 2)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6553</th>\n",
-       "      <td>1.637355e+09</td>\n",
-       "      <td>'drive_wheels', 100.0, 100.0, 1)</td>\n",
+       "      <th>9398</th>\n",
+       "      <td>1637353834.2910442</td>\n",
+       "      <td>'move_head', 0, 0, 0, 80)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6554</th>\n",
-       "      <td>1.637355e+09</td>\n",
-       "      <td>'set_lift_height', 0, 1)</td>\n",
+       "      <th>9399</th>\n",
+       "      <td>1637353834.2910442</td>\n",
+       "      <td>'move_arm', 'left', 80, 80)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6555</th>\n",
-       "      <td>1.637355e+09</td>\n",
-       "      <td>'set_head_angle', -10, 1, 3)</td>\n",
+       "      <th>9400</th>\n",
+       "      <td>1637353834.2910442</td>\n",
+       "      <td>'move_arm', 'right', 80, 80)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6556 rows × 2 columns</p>\n",
+       "<p>9401 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                ID                                           Function\n",
-       "0     1.616770e+09  'display_oled_face_image', 'resources/cozmo_fa...\n",
-       "1     1.616770e+09                     'drive_wheels', 25.0, 25.0, 3)\n",
-       "2     1.616770e+09                           'set_lift_height', 0, 1)\n",
-       "3     1.616770e+09                       'set_head_angle', -10, 1, 3)\n",
-       "4     1.616770e+09  'display_oled_face_image', 'resources/cozmo_fa...\n",
-       "...            ...                                                ...\n",
-       "6551  1.637355e+09                      'say_text', 'umm', 1, -0.125)\n",
-       "6552  1.637355e+09                         'set_head_angle', 44.5, 1)\n",
-       "6553  1.637355e+09                   'drive_wheels', 100.0, 100.0, 1)\n",
-       "6554  1.637355e+09                           'set_lift_height', 0, 1)\n",
-       "6555  1.637355e+09                       'set_head_angle', -10, 1, 3)\n",
+       "                       ID                      Function\n",
+       "0                       -                           NaN\n",
+       "1     1617740862.2616577    'move_head', -10, 0, 0, 80)\n",
+       "2     1617740862.2616577      'move_head', 0, 0, 0, 80)\n",
+       "3     1617740862.2616577    'move_arm', 'left', 80, 80)\n",
+       "4     1617740862.2616577   'move_arm', 'right', 80, 80)\n",
+       "...                   ...                           ...\n",
+       "9396  1637353834.2910442     'move_head', 0, 35, 0, 80)\n",
+       "9397  1637353834.2910442     'drive_track', -16, 48, 2)\n",
+       "9398  1637353834.2910442      'move_head', 0, 0, 0, 80)\n",
+       "9399  1637353834.2910442    'move_arm', 'left', 80, 80)\n",
+       "9400  1637353834.2910442   'move_arm', 'right', 80, 80)\n",
        "\n",
-       "[6556 rows x 2 columns]"
+       "[9401 rows x 2 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "misty_functions = pd.read_csv (r'functions_misty_no_dashes.txt', sep='(')\n",
-    "misty_functions.to_csv (r'functions_misty_no_dashes.csv', index = None)\n",
+    "misty_functions = pd.read_csv (r'functions_misty.txt', sep='(')\n",
+    "misty_functions.to_csv (r'functions_misty.csv', index = None)\n",
     "misty_functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "misty_functions['Function'] = misty_functions['Function'].apply(lambda x: '(' + x)"
+    "misty_functions['Function'] = misty_functions['Function'].apply(lambda x: appendParen(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       ('display_oled_face_image', 'resources/cozmo_f...\n",
-       "1                         ('drive_wheels', 25.0, 25.0, 3)\n",
-       "2                               ('set_lift_height', 0, 1)\n",
-       "3                           ('set_head_angle', -10, 1, 3)\n",
-       "4       ('display_oled_face_image', 'resources/cozmo_f...\n",
-       "                              ...                        \n",
-       "6551                       ('say_text', 'umm', 1, -0.125)\n",
-       "6552                          ('set_head_angle', 44.5, 1)\n",
-       "6553                    ('drive_wheels', 100.0, 100.0, 1)\n",
-       "6554                            ('set_lift_height', 0, 1)\n",
-       "6555                        ('set_head_angle', -10, 1, 3)\n",
-       "Name: Function, Length: 6556, dtype: object"
+       "0                                (nan\n",
+       "1        ('move_head', -10, 0, 0, 80)\n",
+       "2          ('move_head', 0, 0, 0, 80)\n",
+       "3        ('move_arm', 'left', 80, 80)\n",
+       "4       ('move_arm', 'right', 80, 80)\n",
+       "                    ...              \n",
+       "9396      ('move_head', 0, 35, 0, 80)\n",
+       "9397      ('drive_track', -16, 48, 2)\n",
+       "9398       ('move_head', 0, 0, 0, 80)\n",
+       "9399     ('move_arm', 'left', 80, 80)\n",
+       "9400    ('move_arm', 'right', 80, 80)\n",
+       "Name: Function, Length: 9401, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39574,16 +39575,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "misty_functions.to_csv (r'functions_misty_no_dashes.csv', index = None)"
+    "misty_functions.to_csv (r'functions_misty.csv', index = None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -39613,125 +39614,123 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.616770e+09</td>\n",
-       "      <td>'display_oled_face_image', 'resources/cozmo_fa...</td>\n",
+       "      <th>8021</th>\n",
+       "      <td>1637355401.752217</td>\n",
+       "      <td>'drive_wheels', 100.0, 50.0, 1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.616770e+09</td>\n",
-       "      <td>'drive_wheels', 25.0, 25.0, 3)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.616770e+09</td>\n",
+       "      <th>8022</th>\n",
+       "      <td>1637355401.752217</td>\n",
        "      <td>'set_lift_height', 0, 1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.616770e+09</td>\n",
+       "      <th>8023</th>\n",
+       "      <td>1637355401.752217</td>\n",
        "      <td>'set_head_angle', -10, 1, 3)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.616770e+09</td>\n",
+       "      <th>8024</th>\n",
+       "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8025</th>\n",
+       "      <td>1637355401.752217</td>\n",
        "      <td>'display_oled_face_image', 'resources/cozmo_fa...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6551</th>\n",
-       "      <td>1.637355e+09</td>\n",
+       "      <th>8026</th>\n",
+       "      <td>1637355401.752217</td>\n",
        "      <td>'say_text', 'umm', 1, -0.125)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6552</th>\n",
-       "      <td>1.637355e+09</td>\n",
+       "      <th>8027</th>\n",
+       "      <td>1637355401.752217</td>\n",
        "      <td>'set_head_angle', 44.5, 1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6553</th>\n",
-       "      <td>1.637355e+09</td>\n",
+       "      <th>8028</th>\n",
+       "      <td>1637355401.752217</td>\n",
        "      <td>'drive_wheels', 100.0, 100.0, 1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6554</th>\n",
-       "      <td>1.637355e+09</td>\n",
+       "      <th>8029</th>\n",
+       "      <td>1637355401.752217</td>\n",
        "      <td>'set_lift_height', 0, 1)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6555</th>\n",
-       "      <td>1.637355e+09</td>\n",
-       "      <td>'set_head_angle', -10, 1, 3)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6556 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                ID                                           Function\n",
-       "0     1.616770e+09  'display_oled_face_image', 'resources/cozmo_fa...\n",
-       "1     1.616770e+09                     'drive_wheels', 25.0, 25.0, 3)\n",
-       "2     1.616770e+09                           'set_lift_height', 0, 1)\n",
-       "3     1.616770e+09                       'set_head_angle', -10, 1, 3)\n",
-       "4     1.616770e+09  'display_oled_face_image', 'resources/cozmo_fa...\n",
-       "...            ...                                                ...\n",
-       "6551  1.637355e+09                      'say_text', 'umm', 1, -0.125)\n",
-       "6552  1.637355e+09                         'set_head_angle', 44.5, 1)\n",
-       "6553  1.637355e+09                   'drive_wheels', 100.0, 100.0, 1)\n",
-       "6554  1.637355e+09                           'set_lift_height', 0, 1)\n",
-       "6555  1.637355e+09                       'set_head_angle', -10, 1, 3)\n",
-       "\n",
-       "[6556 rows x 2 columns]"
+       "                      ID                                           Function\n",
+       "8021  1637355401.752217                     'drive_wheels', 100.0, 50.0, 1)\n",
+       "8022  1637355401.752217                            'set_lift_height', 0, 1)\n",
+       "8023  1637355401.752217                        'set_head_angle', -10, 1, 3)\n",
+       "8024                   -                                                NaN\n",
+       "8025  1637355401.752217   'display_oled_face_image', 'resources/cozmo_fa...\n",
+       "8026  1637355401.752217                       'say_text', 'umm', 1, -0.125)\n",
+       "8027  1637355401.752217                          'set_head_angle', 44.5, 1)\n",
+       "8028  1637355401.752217                    'drive_wheels', 100.0, 100.0, 1)\n",
+       "8029  1637355401.752217                            'set_lift_height', 0, 1)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cozmo_functions = pd.read_csv (r'functions_cozmo_no_dashes.txt', sep='(')\n",
-    "cozmo_functions.to_csv (r'functions_cozmo_no_dashes.csv', index = None)\n",
-    "cozmo_functions"
+    "cozmo_functions = pd.read_csv (r'functions_cozmo.txt', sep='(')\n",
+    "#cozmo_functions.to_csv (r'functions_cozmo.csv', index = None)\n",
+    "cozmo_functions[-10:-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cozmo_functions['Function'] = cozmo_functions['Function'].apply(lambda x: '(' + x)"
+    "def appendParen(x):\n",
+    "    if x != 'nan':\n",
+    "        return '(' + str(x)\n",
+    "    else:\n",
+    "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cozmo_functions['Function'] = cozmo_functions['Function'].apply(lambda x: appendParen(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       ('display_oled_face_image', 'resources/cozmo_f...\n",
-       "1                         ('drive_wheels', 25.0, 25.0, 3)\n",
-       "2                               ('set_lift_height', 0, 1)\n",
-       "3                           ('set_head_angle', -10, 1, 3)\n",
-       "4       ('display_oled_face_image', 'resources/cozmo_f...\n",
+       "0                                                    (nan\n",
+       "1       ('display_oled_face_image', 'resources/cozmo_f...\n",
+       "2                         ('drive_wheels', 25.0, 25.0, 3)\n",
+       "3                               ('set_lift_height', 0, 1)\n",
+       "4                           ('set_head_angle', -10, 1, 3)\n",
        "                              ...                        \n",
-       "6551                       ('say_text', 'umm', 1, -0.125)\n",
-       "6552                          ('set_head_angle', 44.5, 1)\n",
-       "6553                    ('drive_wheels', 100.0, 100.0, 1)\n",
-       "6554                            ('set_lift_height', 0, 1)\n",
-       "6555                        ('set_head_angle', -10, 1, 3)\n",
-       "Name: Function, Length: 6556, dtype: object"
+       "8026                       ('say_text', 'umm', 1, -0.125)\n",
+       "8027                          ('set_head_angle', 44.5, 1)\n",
+       "8028                    ('drive_wheels', 100.0, 100.0, 1)\n",
+       "8029                            ('set_lift_height', 0, 1)\n",
+       "8030                        ('set_head_angle', -10, 1, 3)\n",
+       "Name: Function, Length: 8031, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39742,11 +39741,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cozmo_functions.to_csv (r'functions_cozmo_no_dashes.csv', index = None)"
+    "cozmo_functions.to_csv (r'functions_cozmo.csv', index = None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def setValue(val):\n",
+    "    global globalVal\n",
+    "    valueChanged= g_val != val\n",
+    "    if valueChanged:\n",
+    "        preFunction()\n",
+    "    globalVal = val\n",
+    "    if valueChanged:\n",
+    "        postFunction()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[\"'display_oled_face_image', 'resources/cozmo_faces/11.png', 2)\", \"'drive_wheels', 100.0, 50.0, 1)\", \"'set_lift_height', 0, 1)\", \"'set_head_angle', -10, 1, 3)\"]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "functions = {}\n",
+    "all_actions = []\n",
+    "action = []\n",
+    "currentID = cozmo_functions.iloc[1]['ID']\n",
+    "prevID = cozmo_functions.iloc[1]['ID']\n",
+    "for index, row in cozmo_functions.iterrows():\n",
+    "    if index == 0:\n",
+    "        continue\n",
+    "    if(row['ID'] == '-'):\n",
+    "        all_actions.append(action)\n",
+    "        action = []\n",
+    "    else:\n",
+    "        currentID = row['ID']\n",
+    "        if currentID != prevID:\n",
+    "            all_actions = []\n",
+    "        action.append(row['Function'])\n",
+    "        functions[currentID.strip()] = all_actions\n",
+    "        prevID = row['ID']\n",
+    "    #print(row['ID'], row['Function'])\n",
+    "print(functions['1637355401.752217'])"
    ]
   },
   {
